[package]
name = "weaver"
version = "0.1.0"
edition = "2024"
description = "Embeddable project chat + issue tracking for Axum apps"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["sync"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
futures-util = "0.3"
axum-extra = { version = "0.10", features = ["multipart"] }
